--- a/pom.xml
+++ b/pom.xml
@@ -3,5 +3,9 @@
 	<groupId>ru.agolovin</groupId>
 	<artifactId>Java-course</artifactId>
 	<version>1.0.0</version>
-	<packaging>jar</packaging> 
+	<packaging>pom</packaging>
+
+	<modules>
+		<module>chapter_001</module>
+	</modules> 
 </project>
