add task1 in chapter5_pro package2

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <modules>
         <module>chapter_003</module>
         <module>package_1</module>
+        <module>package_2</module>
     </modules>
 
     <properties>
