--- a/pom.xml
+++ b/pom.xml
@@ -33,13 +33,13 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>RELEASE</version>
+            <version>2.7.20</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>RELEASE</version>
+            <version>21.0</version>
         </dependency>
     </dependencies>
 
