--- a/package_2/multithreading/elevator/pom.xml
+++ b/package_2/multithreading/elevator/pom.xml
@@ -3,23 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>package_2</artifactId>
+        <artifactId>multithreading</artifactId>
         <groupId>ru.agolovin</groupId>
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
-    <modules>
-        <module>threads</module>
-        <module>jmm</module>
-        <module>monitore</module>
-        <module>waitnotify</module>
-        <module>nonblocking</module>
-        <module>bomberman</module>
-        <module>elevator</module>
-    </modules>
 
-    <artifactId>multithreading</artifactId>
+    <artifactId>elevator</artifactId>
 
 
 </project>
