--- a/package_2/pom.xml
+++ b/package_2/pom.xml
@@ -12,5 +12,6 @@
     <modules>
         <module>chapter_005_pro</module>
         <module>multithreading</module>
+        <module>sql</module>
     </modules>
 </project>
