--- a/package_2/sql/jdbc/pom.xml
+++ b/package_2/sql/jdbc/pom.xml
@@ -3,17 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>package_2</artifactId>
+        <artifactId>sql</artifactId>
         <groupId>ru.agolovin</groupId>
         <version>1.0</version>
     </parent>
-    <artifactId>sql</artifactId>
+    <artifactId>jdbc</artifactId>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
-
-    <modules>
-        <module>jdbc</module>
-    </modules>
+    <packaging>jar</packaging>
 
 
 
