--- a/package_2/sql/jdbc/pom.xml
+++ b/package_2/sql/jdbc/pom.xml
@@ -11,6 +11,12 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.1-901-1.jdbc4</version>
+        </dependency>
+    </dependencies>
 
 </project>
