--- a/package_2/sql/xslt/pom.xml
+++ b/package_2/sql/xslt/pom.xml
@@ -3,19 +3,20 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>package_2</artifactId>
+        <artifactId>sql</artifactId>
         <groupId>ru.agolovin</groupId>
         <version>1.0</version>
     </parent>
-    <artifactId>sql</artifactId>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
 
-    <modules>
-        <module>jdbc</module>
-        <module>xslt</module>
-    </modules>
-
+    <artifactId>xslt</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.21.0.1</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
