--- a/package_2/sql/xslt/src/main/resources/xslt.properties
+++ b/package_2/sql/xslt/src/main/resources/xslt.properties
@@ -1,2 +1,5 @@
 drivername=org.sqlite.JDBC
-connectionstring=jdbc:sqlite:xslt.db
+url=jdbc:sqlite:xslt.db
+create=CREATE TABLE IF NOT EXISTS entry(field int NOT NULL PRIMARY KEY AUTOINCREMENT)
+clear=DELETE FROM
+insert=INSERT INTO entry  VALUES (?)
