prepare for xslt task

--- a/package_2/sql/xslt/src/main/resources/xslt.properties
+++ b/package_2/sql/xslt/src/main/resources/xslt.properties
@@ -1,5 +1,6 @@
 drivername=org.sqlite.JDBC
 url=jdbc:sqlite:xslt.db
-create=CREATE TABLE IF NOT EXISTS entry(field int NOT NULL PRIMARY KEY AUTOINCREMENT)
-clear=DELETE FROM
+create=CREATE TABLE IF NOT EXISTS entry(field INTEGER NOT NULL PRIMARY KEY AUTOINCREMENT)
+clear=DELETE FROM entry
 insert=INSERT INTO entry  VALUES (?)
+select=SELECT * FROM entry
