test task "Switcher"

--- a/package_2/multithreading/pom.xml
+++ b/package_2/multithreading/pom.xml
@@ -18,6 +18,7 @@
         <module>bomberman</module>
         <module>elevator</module>
         <module>testTaskLock</module>
+        <module>testTaskString</module>
     </modules>
 
     <artifactId>multithreading</artifactId>
