test task "Парсер"

--- a/package_2/sql/parser/src/main/resources/app.properties
+++ b/package_2/sql/parser/src/main/resources/app.properties
@@ -2,3 +2,7 @@ jdbc.driver=org.postgresql.Driver
 jdbc.url=jdbc:postgresql://localhost:5432/tracker
 jdbc.username=postgres
 jdbc.password=password
+
+create = CREATE TABLE  IF NOT EXISTS parser (id serial primary key, description text, url text, date timestamp)
+
+insert = INSERT INTO parser(description, url, date)
